# db-homework

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  toukei_output.json
docs/: README.md  archive-toukei.md  code-stats.md  duck-assistant.md
examples/: test_dll.rs  usage_example.c
mysql/init/: data.sql  schema.sql
scripts/: README.md  start_attendance.sh  start_duck.sh  start_duck_gui.sh
src/: README.md  config.rs  consts.rs  ffi.rs  file_reader.rs  lib.rs  main.rs
src/ai/: AiClient.java  README.md
src/app/: Main.java  README.md
src/assistant/: README.md
src/assistant/cli/: DuckAssistant.java  README.md
src/attendance/config/: DbConfig.java
src/attendance/controller/: AttendanceController.java
src/attendance/dao/: StudentDao.java  (+3 more)
src/core/: lang_def.rs  lang_error.rs  lang_type.rs  mod.rs
src/game/: README.md
src/geom/: README.md  Vector2.java
src/gui/: README.md
src/infra/: README.md  ToolPaths.java
src/model/: README.md
src/tests/: test.rs
src/utils/: macros.rs  mod.rs
tools/: README.md
tools/code-stats/: Makefile  README.md  code_stats  code_stats.cpp
webook-db-homework/: Dockerfile  Makefile  README.md  buf.gen.yaml  coverage.out  debug_test.html  docker-compose.yaml  go.mod  go.sum  main.go  tatus
webook-db-homework/configs/: dev.yaml  sms.yaml
webook-db-homework/interactive/: app.go  client_test.go  data_migration_test.go  main.go  run_migration_test.sh  wire.go  wire_gen.go
webook-db-homework/ioc/: db.go  kafka.go  redis.go  sms.go  web.go  wechat.go
webook-fe/: Dockerfile  package-lock.json  package.json
(+190 files in other folders)
