[package]
name = "toukei"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toukei"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
walkdir = "2"
strum = "0.27"
strum_macros = "0.27"
regex = "1.9.0"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.140"
csv = "1.2"
umya-spreadsheet = "2.3.3"
